refactor: general cleanup and modernisation