@@ -8,7 +8,6 @@ import ledge.application.event.*;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 public class ProductController {
     private final ProductService productService;
@@ -24,18 +23,7 @@ public class ProductController {
     }
 
     private void handleProductAdded(ProductAddedEvent event) {
-        ProductDTO dto = event.getProduct();
-        
-        Product domainProduct = new Product(
-            dto.getId(),
-            dto.getName(),
-            dto.getPurchasePrice(),
-            dto.getSellingPrice(),
-            dto.getStockQuantity(),
-            dto.getTaxRate()
-        );
-        
-        productService.addProduct(domainProduct);
+        productService.addProduct(fromDTO(event.getProduct()));
         eventBroker.publish(new ProductsUpdatedEvent(getAllProducts()));
     }
 
@@ -55,7 +43,7 @@ public class ProductController {
     public List<ProductDTO> getAllProducts() {
         return productService.getAllProducts().stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private ProductDTO toDTO(Product product) {
@@ -66,6 +54,17 @@ public class ProductController {
             product.getSellingPrice(),
             product.getStockQuantity(),
             product.getTaxRate()
+        );
+    }
+
+    private Product fromDTO(ProductDTO dto) {
+        return new Product(
+            dto.getId(),
+            dto.getName(),
+            dto.getPurchasePrice(),
+            dto.getSellingPrice(),
+            dto.getStockQuantity(),
+            dto.getTaxRate()
         );
     }
 }
